...
                    ButtonSegment(
                      value: TextureFilter.nearest,
                      label: Text('Nearest'),
                    ),
                    ButtonSegment(
                      value: TextureFilter.linear,
                      label: Text('Linear'),
                    ),
                  ],
                  selected: {filter},
                  onSelectionChanged: (value) => setState(() {
                    filter = value.single;
                    mesh.material = material();
...
                    ButtonSegment(
                      value: TextureWrap.repeat,
                      label: Text('Repeat'),
                    ),
                    ButtonSegment(
                      value: TextureWrap.clampToEdge,
                      label: Text('Clamp'),
                    ),
                    ButtonSegment(
                      value: TextureWrap.mirroredRepeat,
                      label: Text('Mirror'),
                    ),
                  ],
...
